QA_Ipreo/src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>AccountProductRegionKey__c</fullName>
        <externalId>true</externalId>
        <label>AccountProductRegionKey</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Vertical__c</fullName>
        <formula>TEXT (Account.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetUniqueKey__c</fullName>
        <description>data migration purpose</description>
        <externalId>true</externalId>
        <label>AssetUniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Beneficial_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beneficial Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First contract that created asset.</description>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_RAG_Status_Description__c</fullName>
        <description>Current RAG Status Description</description>
        <label>Current RAG Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_RAG_Status_Last_Modified_Date__c</fullName>
        <label>Current RAG Status Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_RAG_Status__c</fullName>
        <label>Current RAG Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Licenses__c</fullName>
        <label>No. of Active Licenses</label>
        <summaryFilterItems>
            <field>Asset_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_License__c.Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Active_Users__c</fullName>
        <label>No. of Active Users</label>
        <summaryFilterItems>
            <field>User_Asset__c.Role__c</field>
            <operation>notEqual</operation>
            <value>Internal User</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>User_Asset__c.Role__c</field>
            <operation>notEqual</operation>
            <value>Comp User</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>User_Asset__c.Role__c</field>
            <operation>notEqual</operation>
            <value>POC Only</value>
        </summaryFilterItems>
        <summaryForeignKey>User_Asset__c.Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Licensed_Users__c</fullName>
        <label>No. of Licensed Users</label>
        <summarizedField>Asset_License__c.No_of_Seats__c</summarizedField>
        <summaryFilterItems>
            <field>Asset_License__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Asset_License__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Sponsored_Accounts__c</fullName>
        <label>No. of Sponsored Accounts</label>
        <summaryForeignKey>Sponsored_Asset__c.Asset_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Sponsored_Users__c</fullName>
        <label>No. of Sponsored Users</label>
        <summaryFilterItems>
            <field>User_Asset__c.Is_Sponsored_User__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>User_Asset__c.Asset__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First opportunity that created asset.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_RAG_Status_Description__c</fullName>
        <label>Previous RAG Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_RAG_Status_Last_Modified_Date__c</fullName>
        <label>Previous RAG Status Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_RAG_Status__c</fullName>
        <label>Previous RAG Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <formula>Account.Primary_Account_Manager__r.FirstName + &apos; &apos; + Account.Primary_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Sales_Rep__c</fullName>
        <formula>Account.Primary_Sales_Rep__r.FirstName + &apos; &apos; + Account.Primary_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Region__c</fullName>
        <label>Product Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Vertical__c</fullName>
        <formula>TEXT(Product2.Vertical__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_status__c</fullName>
        <label>RAG status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referenceable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_RAG_Status__c</fullName>
        <label>Reason for RAG Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referenceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referenceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Account_Manager__c</fullName>
        <formula>Account.Secondary_Account_Manager__r.FirstName + &apos; &apos; + Account.Secondary_Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Sales_Rep__c</fullName>
        <formula>Account.Secondary_Sales_Rep__r.FirstName + &apos; &apos; + Account.Secondary_Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholder_ID_Non_domestic_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shareholder ID - Non-domestic (project)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shareholder_ID_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shareholder ID (project)</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Assets_with_BDVEQ</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDV - EQ</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Assets with BDV - EQ</label>
    </listViews>
    <listViews>
        <fullName>AllActiveAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Active_Licenses__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Assets (Active)</label>
    </listViews>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Active_Licenses__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets (Active and Inactive)</label>
    </listViews>
    <listViews>
        <fullName>AllInactiveAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Active_Licenses__c</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Assets (Inactive)</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDACI</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDA - CI</value>
        </filters>
        <label>All Assets with BDA - CI</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDADV</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDA - DV</value>
        </filters>
        <label>All Assets with BDA - DV</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDAEQ</fullName>
        <columns>ASSET.NAME</columns>
        <columns>RAG_status__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDA - EQ</value>
        </filters>
        <label>All Assets with BDA - EQ</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDAFI</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDA - FI</value>
        </filters>
        <label>All Assets with BDA - FI</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDCEQ</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>RAG_status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDC - EQ</value>
        </filters>
        <label>All Assets with BDC - EQ</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDCFI</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDC - FI</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Assets with BDC - FI</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDCG</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDCG</value>
        </filters>
        <label>All Assets with BDCG</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDCModules</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Beneficial_Ownership__c</columns>
        <columns>Shareholder_ID_project__c</columns>
        <columns>Shareholder_ID_Non_domestic_project__c</columns>
        <columns>No_of_Active_Licenses__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shareholder_ID_project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Shareholder_ID_Non_domestic_project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Beneficial_Ownership__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Assets with BDC and Modules Enabled</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDCRE</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDC - RE</value>
        </filters>
        <label>All Assets with BDC - RE</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDIRC</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <columns>RAG_status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDIRC</value>
        </filters>
        <label>All Assets with BDIRC</label>
    </listViews>
    <listViews>
        <fullName>All_Assets_with_BDVCI</fullName>
        <columns>ASSET.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_Region__c</columns>
        <columns>ASSET.STATUS</columns>
        <columns>No_of_Licensed_Users__c</columns>
        <columns>No_of_Active_Users__c</columns>
        <columns>ASSET.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>equals</operation>
            <value>BDV - CI</value>
        </filters>
        <label>All Assets with BDV - CI</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Asset_Name_Changes</fullName>
        <active>true</active>
        <description>The Asset name can only be changed by Sales Ops or a System Administrator</description>
        <errorConditionFormula>ISCHANGED( Name ) &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Operations User&apos;</errorConditionFormula>
        <errorMessage>The Asset name can only be changed by Sales Ops or a System Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Product_Region</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Product_Region__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Product_Region__c</errorDisplayField>
        <errorMessage>Product Region must be selected.</errorMessage>
    </validationRules>
</CustomObject>